<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>projectlx.co.zw</groupId>
    <artifactId>ldms-backend</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>LDMS Backend</name>
    <description>Project LX LDMS — Maven parent POM</description>

    <properties>
        <java.version>17</java.version>
        <maven.compiler.release>17</maven.compiler.release>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

        <spring-boot.version>3.4.2</spring-boot.version>
        <!-- Moorgate: Spring Boot 3.4.x (Leyton 2023.0.x only supports Boot 3.2–3.3) -->
        <spring-cloud.version>2024.0.2</spring-cloud.version>
        <lombok.version>1.18.36</lombok.version>

        <springdoc-openapi.version>2.3.0</springdoc-openapi.version>
        <redisson.version>3.27.2</redisson.version>
        <jjwt.version>0.12.5</jjwt.version>
        <resilience4j.version>2.2.0</resilience4j.version>

        <maven-compiler-plugin.version>3.13.0</maven-compiler-plugin.version>

        <sonar.host.url>http://localhost:9000</sonar.host.url>
        <sonar.projectKey>ldms-platform</sonar.projectKey>
        <sonar.projectName>LDMS Platform</sonar.projectName>
    </properties>

    <!--
      Modules: uncomment a <module> only after that subdirectory exists with its own pom.xml.
      Comment out again if the module is removed. Order matches the 23 services + shared library.
    -->
    <modules>
        <module>ldms-shared-library</module>
        <module>ldms-api-gateway</module>
        <module>ldms-config-server</module>
        <module>ldms-eureka-server</module>
        <module>ldms-user-management</module>
        <module>ldms-file-upload-service</module>
        <module>ldms-authentication</module>
        <module>ldms-organization-management</module>
        <module>ldms-locations</module>
        <!-- <module>ldms-reference-config</module> -->
        <!-- <module>ldms-inventory-management</module> -->
        <!-- <module>ldms-shipment-management</module> -->
        <!-- <module>ldms-documents-management</module> -->
        <!-- <module>ldms-fleet-management</module> -->
        <!-- <module>ldms-trip-tracking</module> -->
        <!-- <module>ldms-roadside-support</module> -->
        <!-- <module>ldms-fuel-expenses</module> -->
        <!-- <module>ldms-billing-payments</module> -->
        <module>ldms-notifications</module>
        <!-- <module>ldms-messaging-bot</module> -->
        <!-- <module>ldms-platform-admin</module> -->
        <!-- <module>ldms-integration</module> -->
        <!-- <module>ldms-reporting-analytics</module> -->
        <module>ldms-audit-trail</module>
        <!-- <module>ldms-scheduler</module> -->
    </modules>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring-boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>${spring-cloud.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <dependency>
                <groupId>org.springdoc</groupId>
                <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
                <version>${springdoc-openapi.version}</version>
            </dependency>
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
            </dependency>

            <dependency>
                <groupId>org.redisson</groupId>
                <artifactId>redisson-spring-boot-starter</artifactId>
                <version>${redisson.version}</version>
            </dependency>

            <dependency>
                <groupId>io.jsonwebtoken</groupId>
                <artifactId>jjwt-api</artifactId>
                <version>${jjwt.version}</version>
            </dependency>
            <dependency>
                <groupId>io.jsonwebtoken</groupId>
                <artifactId>jjwt-impl</artifactId>
                <version>${jjwt.version}</version>
            </dependency>
            <dependency>
                <groupId>io.jsonwebtoken</groupId>
                <artifactId>jjwt-jackson</artifactId>
                <version>${jjwt.version}</version>
            </dependency>

            <dependency>
                <groupId>io.github.resilience4j</groupId>
                <artifactId>resilience4j-spring-boot3</artifactId>
                <version>${resilience4j.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    

    <repositories>
        <repository>
            <id>nexus</id>
            <url>http://localhost:8081/repository/maven-public/</url>
            <releases><enabled>true</enabled></releases>
            <snapshots><enabled>true</enabled></snapshots>
        </repository>
    </repositories>

    

    <distributionManagement>
        <repository>
            <id>nexus-releases</id>
            <url>http://localhost:8081/repository/maven-releases/</url>
        </repository>
        <snapshotRepository>
            <id>nexus-snapshots</id>
            <url>http://localhost:8081/repository/maven-snapshots/</url>
        </snapshotRepository>
    </distributionManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                    <version>${spring-boot.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${maven-compiler-plugin.version}</version>
                    <configuration>
                        <release>${maven.compiler.release}</release>
                        <parameters>true</parameters>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
            </plugin>

            <plugin>
                <groupId>org.sonarsource.scanner.maven</groupId>
                <artifactId>sonar-maven-plugin</artifactId>
                <version>3.11.0.3922</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <version>3.5.0</version>
                <executions>
                    <execution>
                        <id>enforce-maven</id>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                        <configuration>
                            <rules>
                                <requireMavenVersion>
                                    <version>[3.9.2,)</version>
                                </requireMavenVersion>
                            </rules>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
